--- a/test/fixtures/questionnaires.yml
+++ b/test/fixtures/questionnaires.yml
@@ -4,6 +4,7 @@ questionnaire0:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "ReviewQuestionnaire"
  display_type:
 
@@ -13,6 +14,7 @@ questionnaire1:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "ReviewQuestionnaire"
  display_type: "Review"
  
@@ -22,6 +24,7 @@ questionnaire2:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "MetareviewQuestionnaire"
  display_type: "Metareview"
 
@@ -32,6 +35,7 @@ questionnaire3:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "CourseEvaluationQuestionnaire"
  display_type: "CourseEvaluation"
 
@@ -41,6 +45,7 @@ questionnaire4:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "SurveyQuestionnaire"
  display_type: "Survey"
  
@@ -50,6 +55,7 @@ peer_review_questionnaire:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "AuthorFeedbackQuestionnaire"
  display_type: "AuthorFeedback"
 
@@ -59,6 +65,7 @@ teammate_review_questionnaire:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "TeammateReviewQuestionnaire"
  display_type: "TeammateReview"
 
@@ -68,6 +75,7 @@ global_survey_questionnaire:
  private: 0
  min_question_score: 0
  max_question_score: 5
+ quiz_question_type: "Multiple Choice - radio"
  type: "GlobalSurveyQuestionnaire"
  display_type: "GlobalSurvey"
 
@@ -77,6 +85,7 @@ quiz_questionnaire1:
   private: 0
   min_question_score: 0
   max_question_score: 1
+  quiz_question_type: "Multiple Choice - radio"
   type: "QuizQuestionnaire"
   display_type: "Quiz"
 
@@ -87,6 +96,7 @@ quiz_questionnaire2:
   private: 0
   min_question_score: 0
   max_question_score: 1
+  quiz_question_type: "Multiple Choice - radio"
   type: "QuizQuestionnaire"
   display_type: "Quiz"
 
@@ -97,5 +107,6 @@ quiz_questionnaire3:
   private: 0
   min_question_score: 0
   max_question_score: 1
+  quiz_question_type: "Multiple Choice - radio"
   type: "QuizQuestionnaire"
   display_type: "Quiz"
